--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
       font-weight: bold;
       display: none;
     }
+    .search-box {
+      margin-bottom: 1em;
+    }
+    .search-box input {
+      font-size: 1em;
+      padding: 0.3em 0.6em;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      width: 230px;
+      max-width: 80vw;
+    }
     /* Popup styles */
     #popupOverlay {
       display: none; position: fixed; z-index: 1001; left: 0; top: 0; width: 100vw; height: 100vh;
@@ -71,6 +82,7 @@
       body { margin: .7em; }
       .event { padding: .6em; }
       #popup { padding: 1em; min-width: 0; }
+      .search-box input { width: 98vw; }
     }
   </style>
 </head>
@@ -78,6 +90,18 @@
   <h1>Visualizador de Agenda HackTown 2025</h1>
   <div class="controls">
     <span id="serverStatus"></span>
+    <div class="search-box">
+      <label>
+        Pesquisar:
+        <input type="text" id="searchInput" placeholder="Filtrar por título, local, palestrante, tag..." autocomplete="off">
+      </label>
+    </div>
+    <div>
+      <label>
+        Horário:
+        <input type="text" placeholder="ex: 09:00 ou 10:00-12:00" id="timeFilter" size="13">
+      </label>
+    </div>
     <div>
       <label>
         Data:
@@ -88,12 +112,6 @@
       <label>
         Lugar:
         <select id="placeFilter" style="max-width: 100%; overflow-x: auto;"><option value="">Todos os Lugares</option></select>
-      </label>
-    </div>
-    <div>
-      <label>
-        Horário:
-        <input type="text" placeholder="ex: 09:00 ou 10:00-12:00" id="timeFilter" size="13">
       </label>
     </div>
     <button id="filterBtn">Filtrar</button>
@@ -145,7 +163,31 @@
     }
 
     let allEvents = [];
-    function render(events, filterTimeRange, filterDayKey, filterPlace) {
+    function eventMatchesSearch(ev, search) {
+      if (!search) return true;
+      const q = search.toLowerCase();
+      // title
+      if (ev.title && ev.title.toLowerCase().includes(q)) return true;
+      // place
+      if (ev.place && ev.place.toLowerCase().includes(q)) return true;
+      // speakers[].name
+      if (ev.speakers && Array.isArray(ev.speakers)) {
+        for (const s of ev.speakers) {
+          if (s.name && s.name.toLowerCase().includes(q)) return true;
+        }
+      }
+      // tags[].name
+      if (ev.tags && Array.isArray(ev.tags)) {
+        for (const t of ev.tags) {
+          if (t.name && t.name.toLowerCase().includes(q)) return true;
+        }
+      }
+      // description
+      if (ev.description && ev.description.toLowerCase().includes(q)) return true;
+      return false;
+    }
+
+    function render(events, filterTimeRange, filterDayKey, filterPlace, searchText) {
       const scheduleDiv = document.getElementById("schedule");
       document.getElementById("loading").style.display = "none";
       if (!events.length) {
@@ -156,10 +198,14 @@
       // Filtro de lugar
       if (filterPlace) {
         events = events.filter(ev => {
-          // Considera "sem local definido" para lugares nulos/vazios
           let place = ev.place && ev.place.trim() ? ev.place.trim() : "sem local definido";
           return place === filterPlace;
         });
+      }
+
+      // Filtro de busca
+      if (searchText && searchText.trim()) {
+        events = events.filter(ev => eventMatchesSearch(ev, searchText));
       }
 
       events = events.slice().sort((a, b) => a.start_time.localeCompare(b.start_time));
@@ -300,7 +346,8 @@
         allEvents,
         parseTimeRange(document.getElementById("timeFilter").value),
         document.getElementById("dateFilter").value,
-        document.getElementById("placeFilter").value
+        document.getElementById("placeFilter").value,
+        document.getElementById("searchInput").value
       );
     };
     document.getElementById("timeFilter").onkeydown = function(e) {
@@ -311,7 +358,8 @@
         allEvents,
         parseTimeRange(document.getElementById("timeFilter").value),
         document.getElementById("dateFilter").value,
-        document.getElementById("placeFilter").value
+        document.getElementById("placeFilter").value,
+        document.getElementById("searchInput").value
       );
     };
     document.getElementById("placeFilter").onchange = function() {
@@ -319,7 +367,17 @@
         allEvents,
         parseTimeRange(document.getElementById("timeFilter").value),
         document.getElementById("dateFilter").value,
-        document.getElementById("placeFilter").value
+        document.getElementById("placeFilter").value,
+        document.getElementById("searchInput").value
+      );
+    };
+    document.getElementById("searchInput").oninput = function() {
+      render(
+        allEvents,
+        parseTimeRange(document.getElementById("timeFilter").value),
+        document.getElementById("dateFilter").value,
+        document.getElementById("placeFilter").value,
+        document.getElementById("searchInput").value
       );
     };
 
@@ -334,7 +392,8 @@
           allEvents,
           parseTimeRange(document.getElementById("timeFilter").value),
           document.getElementById("dateFilter").value,
-          document.getElementById("placeFilter").value
+          document.getElementById("placeFilter").value,
+          document.getElementById("searchInput").value
         );
       };
       document.head.appendChild(s);
@@ -379,7 +438,6 @@
         dateSel.appendChild(opt);
       });
 
-      // Se não houver seleção anterior, tente selecionar hoje automaticamente
       if (!prev || !daysArr.includes(prev)) {
         const hojeStr = dataHojePortugues();
         if (daysArr.includes(hojeStr)) {
@@ -467,7 +525,8 @@
             allEvents,
             parseTimeRange(document.getElementById("timeFilter").value),
             document.getElementById("dateFilter").value,
-            document.getElementById("placeFilter").value
+            document.getElementById("placeFilter").value,
+            document.getElementById("searchInput").value
           );
         } catch (e) {
           status.textContent = "Erro ao processar JSON da agenda: " + e;
