--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </style>
 </head>
 <body>
-  <h1>Visualizador de Agenda HackTown 2025</h1>
+  <h1>Agenda HackTown 2025</h1>
   <div class="controls">
     <span id="serverStatus"></span>
     <form class="search-box" onsubmit="return false;">
