Atualiza título novamente

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Agenda HackTown 2025</title>
+  <title>Buscador HackTown 2025</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: system-ui, sans-serif; margin: 2em; background: #f8f8fb; color: #222; }
@@ -183,7 +183,7 @@
   </style>
 </head>
 <body>
-  <h1>Agenda HackTown 2025</h1>
+  <h1>Buscador HackTown 2025</h1>
   <div class="controls">
     <span id="serverStatus"></span>
     <form class="search-box" onsubmit="return false;">
